--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.midrar.gui</groupId>
+    <groupId>com.midrar</groupId>
     <artifactId>javafx-mvc</artifactId>
-    <version>1.0-beta1</version>
+    <version>0.1-beta1</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
