--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.midrar</groupId>
     <artifactId>javafx-mvc</artifactId>
-    <version>0.1-beta1</version>
+    <version>0.1-beta2</version>
+    <name>JavaFx-MVC</name>
+    <description>
+        JavaFX-MVC framework for creating JavaFx apps using the MVC design pattern.
+    </description>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
